<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="fill_parent">
<LinearLayout  android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.compscitutorials.basigarcia.navigationdrawervideotutorial.MainFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
<TextView
    android:text="@string/name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/colorSecondaryText"/>
        <EditText
            android:id="@+id/reg_first_name"
            android:layout_width="100dp"
            android:layout_height="40dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:text="@string/date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"/>
        <Button
            android:id="@+id/reg_setdate"
            android:text="@string/set_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:text="@string/gender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"/>
        <RadioGroup
            android:id="@+id/reg_gender_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioButton
                android:text="@string/gender_male"
                android:id="@+id/reg_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"/>
            <RadioButton
                android:text="@string/gender_female"
                android:id="@+id/reg_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"/>
        <EditText
            android:id="@+id/reg_password"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="textPassword"/>
        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
    <LinearLayout
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_gravity="center"
        android:gravity="center">
    <ImageView
        android:id="@+id/reg_image_view"
        android:background="@drawable/ic_launcher"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    </LinearLayout>
    <Button
        android:id="@+id/reg_submit"
        android:text="@string/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>
</ScrollView>